* Further simplify the Ruby build system. [Kit Goncharov]

* Add all Scotch unit tests for `fuse.Array`. [Kit Goncharov]

* Add a lightweight version of Sprockets to `Build.rb` for building FuseJS. [Kit Goncharov]

* Switch to a pure-Ruby build system. [Kit Goncharov]
  - To build FuseJS, run `ruby Build.rb -d` or `--dist`.
  - To build the old unit tests, run `ruby Build.rb -t` or `--test`.

* Add fuse.Object.getClassOf() and provide a fallback in case {}.toString.call(...) fails to resolve sandboxed natives [[Class]]. [jddalton]

* Move fuse.Enumerable to fuse.Class.mixins.enumerable. [FuseJS LH #68] [jddalton]

* Add fuse.dom.Event._addDispatcher and rename other implied private methods. [jddalton]

* Add `skipDataInit` argument to fuse.dom.Node.getFuseId(). [jddalton]

* Add clone(deep) methods to Array, Element, Hash, Object, Number, Range, String, and Template. [FuseJS LH #18] [jddalton, Joe Gornick]

* Add caching/decorating options to fuse.dom.Element create(), from(), fromElement(), fromHTML(), and fromId(). [jddalton]

* Rename fuse.dom.getFragmentFromString() to fuse.dom.getFragmentFromHTML(). [jddalton]

* Add fuse.dom.Element methods fromId() and fromHTML(). [jddalton]

* Remove fuse.get() and fuse.getById(). [jddalton]

* Optimize event findElement(), getPointerX(), and getPointerX() methods by reducing the number of elements that are decorated. [jddalton]

* Make the IE `dom:loaded` event only use the doScroll() technique when using less than IE8. [jddalton]

* Change argument order in dom traversal methods. [jddalton]
  New argument order for up/down/next/previous/first/last methods:
    (/* empty */)
    (count)
    (count, selector)
    (count, callback, thisArg)
    (selector)
    (callback, thisArg)

* Make the readyState poller for the dom:loaded event fire sooner and avoid the poller if the window is already loaded. [jddalton]

* Move toQueryString() and toQueryParam() methods to /lang/query.js and remove `parseQuery` alias. [jddalton]