@@ -211,7 +211,7 @@
   <input type="checkbox" name="write_attribute_checkbox" value="" id="write_attribute_checkbox">
   <input type="text" name="write_attribute_input" value="" id="write_attribute_input">
   <select id="write_attribute_select">
-    <option>Cat</option>
+    <option id="write_attribute_option">Cat</option>
     <option>Dog</option>
   </select>
 </form>
@@ -235,10 +235,10 @@
 <div id="floating_inline" style="float:left">FI</div>
 <div id="floating_style">FS</div>
 <!-- Test Element opacity functions -->
-<img id="op1" alt="op2" src="../fixtures/logo.gif" style="opacity:0.5;filter:alpha(opacity=50)">
-<img id="op2" alt="op2" src="../fixtures/logo.gif">
-<img id="op3" alt="op3" src="../fixtures/logo.gif">
-<img id="op4-ie" alt="op3" src="../fixtures/logo.gif" style="filter:alpha(opacity=30)">
+<img id="op1" alt="op2" src="../source/fixtures/logo.gif" style="opacity:0.5;filter:alpha(opacity=50)">
+<img id="op2" alt="op2" src="../source/fixtures/logo.gif">
+<img id="op3" alt="op3" src="../source/fixtures/logo.gif">
+<img id="op4-ie" alt="op3" src="../source/fixtures/logo.gif" style="filter:alpha(opacity=30)">
 <div id="dimensions-visible"></div>
 <div id="dimensions-display-none"></div>
 <div id="dimensions-visible-pos-rel"></div>
@@ -365,10 +365,10 @@
   <div class='addPadding addBorders'>position:relative, padding, borders</div>
   <div class='addMargin addPadding addBorders'>position:relative, margin, padding, borders</div>
   <span class='addMargin addPadding addBorders'>position:relative, margin, padding, borders</span>
-  <img class='addMargin' src='../fixtures/logo.gif'>
-  <img class='addPadding' src='../fixtures/logo.gif'>
-  <img class='addBorders' src='../fixtures/logo.gif'>
-  <img class='addMargin addPadding addBorders' src='../fixtures/logo.gif'>
+  <img class='addMargin' src='../source/fixtures/logo.gif'>
+  <img class='addPadding' src='../source/fixtures/logo.gif'>
+  <img class='addBorders' src='../source/fixtures/logo.gif'>
+  <img class='addMargin addPadding addBorders' src='../source/fixtures/logo.gif'>
 </div>
 
 <div id="unextended"></div>
@@ -398,4 +398,4 @@
   </div>
 </div>
 
-<iframe id="iframe" src="../fixtures/dom_iframe.html"></iframe>
+<iframe id="iframe" src="../source/fixtures/dom_iframe.html"></iframe>
